<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <packaging>pom</packaging>

    <groupId>org.tcotool</groupId>
    <artifactId>tco-tool-parent</artifactId>
    <version>1.6.0-SNAPSHOT</version>

    <inceptionYear>2005</inceptionYear>
    <organization>
        <name>softEnvironment GmbH (liq.), Peter Hirzel, Switzerland</name>
    </organization>
    <description>Total Cost of Ownership calculation (Standalone Java Swing UI Application with XML files for your
        Project-Data).
    </description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <lombok.version>1.18.24</lombok.version>

        <org.slf4j.version>1.7.36</org.slf4j.version>
        <ch.qos.logback>1.2.10</ch.qos.logback>

        <junit.version>4.13.2</junit.version>
        <jfcunit.version>2.08</jfcunit.version>
    </properties>

    <modules>
        <module>sebase</module>
        <module>jomm</module>
        <module>tco-tool-core</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.tcotool</groupId>
                <artifactId>sebase</artifactId>
                <version>1.6.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.tcotool</groupId>
                <artifactId>jomm</artifactId>
                <version>1.6.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>org.tcotool</groupId>
                <artifactId>tco-tool-core</artifactId>
                <version>1.6.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <!-- Logging, Impl may be overwritten see https://www.slf4j.org/manual.html -->
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${org.slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${org.slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${ch.qos.logback}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>